# routes/api.php
@@ -12,3 +12,5 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 Route::get('/tools', 'API\toolsController@index')->name('tools.index');
 
 Route::post('/tools', 'API\toolsController@store')->name('tools.store');
+
+Route::delete('/tools/{id}', 'API\toolsController@destroy')->name('tools.delete');
